FIX: arquillian fix